grammar.js
        source_file: $ => repeat(
            seq($._declaration, /\s/),
        ),

        _declaration: $ => choice(
            $.constant_declaration,
            $.extern_declaration,
            $.action_declaration,
            $.parser_declaration,
            $.type_declaration,
            $.control_declaration,
            $.instantiation,
            $.error_declaration,
            $.match_kind_declaration,
            $.function_declaration,
            $.include_declaration
        ),

        non_type_name: $ => choice(
            $.identifier,
            'apply',
            'key',
            'actions',
            'state',
            'entries',
            'type',
        ),

        name: $ => choice(
            $.non_type_name,
            $.type_identifier,
        ),

        include_declaration: $ => seq(
            '#',
            'include',
            '<',
            $.file_name,
            '>'
        ),

        file_name: $ => /\w*.\w*/,

        parameter_list: $ => choice(
            $.parameter,
            seq($.parameter_list, ',', $.parameter),
        ),

        parameter: $ => choice(
            seq(repeat($.annotation), optional($.direction), $.type_ref, $.name),
            seq(repeat($.annotation), optional($.direction), $.type_ref, $.name, '=', $.expression),
        ),

        direction: $ => choice(
            'in',
            'out',
            'inout',
        ),

        instantiation: $ => choice(
            seq($.type_ref, '(', optional($.argument_list), ')', $.name, ';'),
            seq(repeat($.annotation), $.type_ref, '(', optional($.argument_list), ')', $.name, ';'),
            seq(repeat($.annotation), $.type_ref, '(', optional($.argument_list), ')', $.name, '=', $.obj_initializer, ';'),
            seq($.type_ref, '(', optional($.argument_list), ')', $.name, '=', $.obj_initializer, ';'),
        ),

        obj_initializer: $ => seq(
            '{', repeat($.obj_declaration), '}'
        ),

        parser_declaration: $ => seq(
            $.parser_type_declaration,
            optional(seq('(', optional($.parameter_list), ')')),
            '{',
            repeat($.parser_local_element),
            repeat($.parser_state),
            '}'
        ),

        parser_type_declaration: $ => seq(
            repeat($.annotation), 'parser', $.name, optional($.type_parameters), '(', optional($.parameter_list), ')'
        ),

        parser_state: $ => seq(
            repeat($.annotation), 'state', $.name, '{', repeat($.parser_statement), optional($.transition_statement), '}'
        ),

        transition_statement: $ => seq(
            'transition', $.state_expression
        ),


        state_expression: $ => choice(
            seq($.name, ';'),
            $.select_expression,
        ),

        control_declaration: $ => seq(
            $.control_type_declaration,
            optional(seq('(', optional($.parameter_list), ')')),
            '{',
            repeat($.control_local_declaration),
            'apply',
            $.control_body,
            '}'
        ),

        control_type_declaration: $ => seq(
            repeat($.annotation), 'control', $.name, optional($.type_parameters), '(', optional($.parameter_list), ')'
        ),

        control_body: $ => seq(
            $.block_statement,
        ),

        extern_declaration: $ => choice(
            seq(repeat($.annotation), 'extern', $.non_type_name, optional($.type_parameters), '{', repeat($.method_prototype), '}'),
            seq(repeat($.annotation), 'extern', $.function_prototype, ';'),
        ),

        function_prototype: $ => seq(
            $.type_or_void, $.name, optional($.type_parameters), '(', optional($.parameter_list), ')'
        ),

        method_prototype: $ => choice(
            seq(repeat($.annotation), $.function_prototype, ';'),
            seq(repeat($.annotation), $.type_identifier, '(', optional($.parameter_list), ')', ';'),
        ),

        type_ref: $ => choice(
            $.base_type,
            $.type_name,
            $.specialized_type,
            $.header_stack_type,
            $.tuple_type,
        ),

        prefixed_type: $ => choice(
            $.type_identifier,
            seq($.dot_prefix, $.type_identifier),
        ),

        type_name: $ => seq(
            $.prefixed_type,
        ),

        base_type: $ => choice(
            'bool',
            'error',
            'match_kind',
            'string',
            'int',
            'bit',
            seq('bit', '<', $.integer, '>'),
            seq('int', '<', $.integer, '>'),
            seq('varbit', '<', $.integer, '>'),
            seq('bit', '<', '(', $.expression, ')', '>'),
            seq('int', '<', '(', $.expression, ')', '>'),
            seq('varbit', '<', '(', $.expression, ')', '>'),
        ),

        type_or_void: $ => prec.left(1, choice(
            $.type_ref,
            'void',
            $.identifier,
        )),

        type_declaration: $ => choice(
            $.derived_type_declaration,
            $.typedef_declaration,
            seq($.parser_type_declaration, ';'),
            seq($.control_type_declaration, ';'),
            seq($.package_type_declaration, ';'),
        ),

        error_declaration: $ => seq(
            'error', '{', $.identifier_list, '}'
        ),

        match_kind_declaration: $ => seq(
            'match_kind', '{', $.identifier_list, '}'
        ),

        identifier_list: $ => choice(
            $.name,
            seq($.identifier_list, ',', $.name),
        ),

        typedef_declaration: $ => choice(
            seq(repeat($.annotation), 'typedef', $.type_ref, $.name, ';'),
            seq(repeat($.annotation), 'typedef', $.derived_type_declaration, $.name, ';'),
            seq(repeat($.annotation), 'type', $.type_ref, $.name, ';'),
            seq(repeat($.annotation), 'type', $.derived_type_declaration, $.name, ';'),
        ),

        assignment_or_method_call_statement: $ => choice(
            seq($.lvalue, '(', optional($.argument_list), ')', ';'),
            seq($.lvalue, '<', optional($.type_argument_list), '>', '(', optional($.argument_list), ')', ';'),
            seq($.lvalue, '=', $.expression, ';'),
        ),

        return_statement: $ => choice(
            seq('return', ';'),
            seq('return', $.expression, ';'),
        ),

        conditional_statement: $ => choice(
            prec.left(seq('if', '(', $.expression, ')', $.statement)),
            prec.left(seq('if', '(', $.expression, ')', $.statement, 'else', $.statement)),
        ),

        block_statement: $ => seq(
            repeat($.annotation), '{', optional($.stat_or_decl_list), '}'
        ),

        stat_or_decl_list: $ => seq(
            optional($.stat_or_decl_list), $.statement_or_declaration
        ),

        action_declaration: $ => seq(
            repeat($.annotation), 'action', $.name, '(', optional($.parameter_list), ')', $.block_statement
        ),

        constant_declaration: $ => seq(
            repeat($.annotation), 'const', $.type_ref, $.name, '=', $.initializer, ';'
        ),

        initializer: $ => seq(
            $.expression,
        ),

        function_declaration: $ => seq(
            $.function_prototype, $.block_statement
        ),

        argument_list: $ => choice(
            $.argument,
            seq($.argument_list, ',', $.argument),
        ),

        argument: $ => choice(
            $.expression,
            seq($.name, '=', $.expression),
            '_',
            seq($.name, '=', '_'),
        ),

        member: $ => seq(
            $.name,
        ),

        prefixed_non_type_name: $ => choice(
            $.non_type_name,
            seq($.dot_prefix, $.non_type_name),
        ),

        lvalue: $ => choice(
            $.prefixed_non_type_name,
            'this',
            seq($.lvalue, '.', $.member),
            seq($.lvalue, '[', $.expression, ']'),
            seq($.lvalue, '[', $.expression, ':', $.expression, ']'),
        ),

        expression: $ => choice(
            $.integer,
            'true',
            'false',
            'this',
            $.string,
            $.non_type_name,
            seq($.dot_prefix, $.non_type_name),
            prec.left(1, seq($.expression, '[', $.expression, ']')),
            prec.left(1, seq($.expression, '[', $.expression, ':', $.expression, ']')),
            prec.left(1, seq('{', optional($.expression_list), '}')),
            prec.left(1, seq('{', $.kv_list, '}')),
            prec.left(1, seq('(', $.expression, ')')),
            prec.right(2, seq('!', $.expression)),
            prec.right(2, seq('~', $.expression)),
            prec.right(2, seq('-', $.expression)),
            prec.right(2, seq('+', $.expression)),
            prec.left(1, seq($.type_name, '.', $.member)),
            prec.left(1, seq('error', '.', $.member)),
            prec.left(1, seq($.expression, '.', $.member)),
            prec.left(3, seq($.expression, '*', $.expression)),
            prec.left(3, seq($.expression, '/', $.expression)),
            prec.left(3, seq($.expression, '%', $.expression)),
            prec.left(4, seq($.expression, '+', $.expression)),
            prec.left(4, seq($.expression, '-', $.expression)),
            prec.left(4, seq($.expression, '|+|', $.expression)),
            prec.left(4, seq($.expression, '|-|', $.expression)),
            prec.left(5, seq($.expression, '<<', $.expression)),
            prec.left(5, seq($.expression, '>>', $.expression)),
            prec.left(11, seq($.expression, '<=', $.expression)), //TODO: Double check precedence of <=,<... and == 
            prec.left(11, seq($.expression, '>=', $.expression)),
            prec.left(11, seq($.expression, '<', $.expression)),
            prec.left(11, seq($.expression, '>', $.expression)),
            prec.left(7, seq($.expression, '!=', $.expression)),
            prec.left(7, seq($.expression, '==', $.expression)),
            prec.left(8, seq($.expression, '&', $.expression)),
            prec.left(9, seq($.expression, '^', $.expression)),
            prec.left(10, seq($.expression, '|', $.expression)),
            prec.left(1, seq($.expression, '++', $.expression)),
            prec.left(12, seq($.expression, '&&', $.expression)),
            prec.left(12, seq($.expression, '||', $.expression)),
            prec.right(13, seq($.expression, '?', $.expression, ':', $.expression)),
            prec.left(1, seq($.expression, '<', $.real_type_argument_list, '>', '(', optional($.argument_list), ')')),
            prec.left(1, seq($.expression, '(', optional($.argument_list), ')')),
            prec.left(1, seq($.named_type, '(', optional($.argument_list), ')')),
            prec.right(2, seq('(', $.type_ref, ')', $.expression)),
        ),

        integer: $ => /(\d+([wWsS]))?\d+(([xX][0-9A-F_]+)|([bB][0-1_]+)|([oO][0-7_]+)|([dD][0-9_]+))?/,

        identifier: $ => /(_|[a-zA-Z])\w*/,

        type_identifier: $ => $.identifier,

    }
});
